--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,4 @@
 REACT_APP_ENV=production
+PORT=80
 REACT_APP_SHARETRIBE_SDK_TRANSIT_VERBOSE=true
+REACT_APP_MARKETPLACE_ROOT_URL=https://web-template-a76415609ffd.herokuapp.com
